# oakvar-mcp

./: .gitignore  README.md  SETUP.md  chatgpt_mcp_config.example.json  claude_desktop_config.example.json  initial-impression.md  pyproject.toml
oakvar_mcp/: __init__.py  __main__.py  server.py
tests/: __init__.py  test_server.py
