[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oakvar-mcp"
version = "0.1.0"
description = "MCP Server for OakVar - A genomic variant analysis platform"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Oak Bioinformatics", email = "info@oakbioinformatics.com"}
]
keywords = ["oakvar", "mcp", "bioinformatics", "genomics", "variant-analysis", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
requires-python = ">=3.9"
dependencies = [
    "mcp>=1.0.0",
    "oakvar>=2.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[project.urls]
Homepage = "https://github.com/rkimoakbioinformatics/oakvar-mcp"
Documentation = "https://github.com/rkimoakbioinformatics/oakvar-mcp#readme"
Repository = "https://github.com/rkimoakbioinformatics/oakvar-mcp"
Issues = "https://github.com/rkimoakbioinformatics/oakvar-mcp/issues"
OakVar = "https://oakvar.readthedocs.io"

[project.scripts]
oakvar-mcp = "oakvar_mcp.server:run"

[tool.setuptools.packages.find]
where = ["."]
include = ["oakvar_mcp*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
